--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<!-- Custom Form  -->
+	<link rel="stylesheet" href="css/custom.form.css">
 
 	<!-- 
 	Default Theme Style 
@@ -477,6 +479,59 @@
 								<p>Iklan pada daftar kegiatan akan tampil per-10 daftar.</p>
 								<p>Iklan pada peta akan tampil dalam bentuk point icon yang menunjukkan lokasi tertentu.</p>
 							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<!-- FORM PENDAFTARAN IKLAN -->
+	<div id="fh5co-testimonials" data-section="formpendaftaraniklan">
+		<div class="container">
+			<div class="row row-bottom-padded-lg" id="form-pendaftaran-iklan">		
+				<div class="col-md-12">
+					<div class="row">
+						<div class="col-md-5 col-md-push-1">
+							<div class="section-heading text-center">
+								<h2>Formulir<br>Pendaftaran Iklan</h2>
+							</div>
+						</div>
+						<div class="col-md-5 col-md-push-1">
+							<form>
+								<div class="contentform">							
+										<div class="form-group">
+											<p>Nama Admin/PIC <span>*</span></p>
+											<input type="text" name="ville" id="ville" data-rule="required" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Ville' doit être renseigné."/>
+											<div class="validation"></div>
+										</div>	
+
+										<div class="form-group">
+											<p>Nama Perusahaan/Lembaga <span>*</span></p>	
+											<input type="text" name="phone" id="phone" data-rule="maxlen:10" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Téléphone' doit être renseigné. Minimum 10 chiffres"/>
+											<div class="validation"></div>
+										</div>
+
+										<div class="form-group">
+											<p>Telepon <span>*</span></p>
+											<input type="text" name="fonction" id="fonction" data-rule="required" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Fonction' doit être renseigné."/>
+											<div class="validation"></div>
+										</div>
+
+										<div class="form-group">
+											<p>Email <span>*</span></p>	
+											<input type="text" name="sujet" id="sujet" data-rule="required" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Sujet' doit être renseigné."/>
+											<div class="validation"></div>
+										</div>
+										
+										<div class="relative fullwidth col-xs-12">
+											<!-- Send Button -->
+											<button type="submit" id="submit" name="submit" class="form-btn semibold">Send Message</button> 
+										</div><!-- End Bottom Submit -->
+										<!-- Clear -->
+										<div class="clear"></div>
+								</div>
+							</form>
 						</div>
 					</div>
 				</div>
