--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Custom Form  -->
 	<link rel="stylesheet" href="css/custom.form.css">
+	<!-- Bootstrap Validator  -->
+	<link rel="stylesheet" href="css/bootstrapValidator.css">
 
 	<!-- 
 	Default Theme Style 
@@ -498,38 +500,67 @@
 							</div>
 						</div>
 						<div class="col-md-5 col-md-push-1">
-							<form>
-								<div class="contentform">							
-										<div class="form-group">
-											<p>Nama Admin/PIC <span>*</span></p>
-											<input type="text" name="ville" id="ville" data-rule="required" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Ville' doit être renseigné."/>
-											<div class="validation"></div>
-										</div>	
+							  <form class="well form-horizontal" action=" " method="post" id="contact_form">
+								<div class="contentform">
+								  <!-- Text input-->
 
-										<div class="form-group">
-											<p>Nama Perusahaan/Lembaga <span>*</span></p>	
-											<input type="text" name="phone" id="phone" data-rule="maxlen:10" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Téléphone' doit être renseigné. Minimum 10 chiffres"/>
-											<div class="validation"></div>
-										</div>
+								  <div class="form-group">
+									<p>Nama Admin/PIC <span>*</span></p>
+									<div class="inputGroupContainer">
+									  <div class="input-group">
+										<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+										<input name="admin_name" placeholder="Nama Admin/PIC" class="form-control" type="text">
+									  </div>
+									</div>
+								  </div>
 
-										<div class="form-group">
-											<p>Telepon <span>*</span></p>
-											<input type="text" name="fonction" id="fonction" data-rule="required" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Fonction' doit être renseigné."/>
-											<div class="validation"></div>
-										</div>
+								  <!-- Text input-->
 
-										<div class="form-group">
-											<p>Email <span>*</span></p>	
-											<input type="text" name="sujet" id="sujet" data-rule="required" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Sujet' doit être renseigné."/>
-											<div class="validation"></div>
-										</div>
-										
-										<div class="relative fullwidth col-xs-12">
-											<!-- Send Button -->
-											<button type="submit" id="submit" name="submit" class="form-btn semibold">Send Message</button> 
-										</div><!-- End Bottom Submit -->
-										<!-- Clear -->
-										<div class="clear"></div>
+								  <div class="form-group">
+									<p>Nama Perusahaan/Lembaga <span>*</span></p>
+									<div class="inputGroupContainer">
+									  <div class="input-group">
+										<span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+										<input name="perusahaan_name" placeholder="Nama Perusahaan/Lembaga" class="form-control" type="text">
+									  </div>
+									</div>
+								  </div>
+
+								  <!-- Text input-->
+								  <div class="form-group">
+									<p>Telepon <span>*</span></p>
+									<div class="inputGroupContainer">
+									  <div class="input-group">
+										<span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+										<input name="telepon" placeholder="Telepon" class="form-control" type="text">
+									  </div>
+									</div>
+								  </div>
+
+
+								  <!-- Text input-->
+
+								  <div class="form-group">
+									<p>Email <span>*</span></p>
+									<div class="inputGroupContainer">
+									  <div class="input-group">
+										<span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+										<input name="email" placeholder="Email" class="form-control" type="text">
+									  </div>
+									</div>
+								  </div>								  
+
+								  <!-- Success message -->
+								  <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
+
+								  <!-- Button -->
+								  <div class="form-group">
+									<label class="col-md-4 control-label"></label>
+									<div class="col-md-4">
+									  <button type="submit" class="btn btn-warning">Kirim <span class="glyphicon glyphicon-send"></span></button>
+									</div>
+								  </div>
+
 								</div>
 							</form>
 						</div>
@@ -567,9 +598,12 @@
 	<script src="js/jquery.waypoints.min.js"></script>
 	<!-- Owl Carousel -->
 	<script src="js/owl.carousel.min.js"></script>
-
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
+	<!-- Custom -->
+	<script src="js/custom.form.js"></script>
+	<!-- Custom -->
+	<script src="js/bootstrapValidator.js"></script>
 
 	</body>
 </html>
