--- a/index.html
+++ b/index.html
@@ -502,64 +502,69 @@
 						<div class="col-md-5 col-md-push-1">
 							  <form class="well form-horizontal" action=" " method="post" id="contact_form">
 								<div class="contentform">
-								  <!-- Text input-->
-
-								  <div class="form-group">
-									<p>Nama Admin/PIC <span>*</span></p>
-									<div class="inputGroupContainer">
-									  <div class="input-group">
-										<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-										<input name="admin_name" placeholder="Nama Admin/PIC" class="form-control" type="text">
-									  </div>
+									<!-- Text input-->
+									<div class="form-group form-label-correction">
+										<p>Nama Admin/PIC <span>*</span></p>
 									</div>
-								  </div>
-
-								  <!-- Text input-->
-
-								  <div class="form-group">
-									<p>Nama Perusahaan/Lembaga <span>*</span></p>
-									<div class="inputGroupContainer">
-									  <div class="input-group">
-										<span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-										<input name="perusahaan_name" placeholder="Nama Perusahaan/Lembaga" class="form-control" type="text">
-									  </div>
+									<div class="form-group">
+										<div class="inputGroupContainer">
+										  <div class="input-group">
+											<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+											<input name="admin_name" placeholder="Nama Admin/PIC" class="form-control" type="text">
+										  </div>
+										</div>
 									</div>
-								  </div>
 
-								  <!-- Text input-->
-								  <div class="form-group">
-									<p>Telepon <span>*</span></p>
-									<div class="inputGroupContainer">
-									  <div class="input-group">
-										<span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-										<input name="telepon" placeholder="Telepon" class="form-control" type="text">
-									  </div>
+									<!-- Text input-->
+									<div class="form-group form-label-correction">
+										<p>Nama Perusahaan/Lembaga <span>*</span></p>
 									</div>
-								  </div>
-
-
-								  <!-- Text input-->
-
-								  <div class="form-group">
-									<p>Email <span>*</span></p>
-									<div class="inputGroupContainer">
-									  <div class="input-group">
-										<span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-										<input name="email" placeholder="Email" class="form-control" type="text">
-									  </div>
+									<div class="form-group">
+										<div class="inputGroupContainer">
+										  <div class="input-group">
+											<span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+											<input name="perusahaan_name" placeholder="Nama Perusahaan/Lembaga" class="form-control" type="text">
+										  </div>
+										</div>
 									</div>
-								  </div>								  
 
-								  <!-- Success message -->
-								  <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
-
-								  <!-- Button -->
-								  <div class="form-group">
-									<label class="col-md-4 control-label"></label>
-									<div class="col-md-4">
-									  <button type="submit" class="btn btn-warning">Kirim <span class="glyphicon glyphicon-send"></span></button>
+									<!-- Text input-->
+									<div class="form-group form-label-correction">
+										<p>Telepon <span>*</span></p>
 									</div>
-								  </div>
+									<div class="form-group">										
+										<div class="inputGroupContainer">
+										  <div class="input-group">
+											<span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+											<input name="telepon" placeholder="Telepon" class="form-control" type="text">
+										  </div>
+										</div>
+									</div>
+
+
+									<!-- Text input-->
+									<div class="form-group form-label-correction">
+										<p>Email <span>*</span></p>
+									</div>
+									<div class="form-group">
+										<div class="inputGroupContainer">
+										  <div class="input-group">
+											<span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+											<input name="email" placeholder="Email" class="form-control" type="text">
+										  </div>
+										</div>
+									</div>								  
+
+									<!-- Success message -->
+									<div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
+
+									<!-- Button -->
+									<div class="form-group">
+										<label class="col-md-4 control-label"></label>
+										<div class="col-md-4">
+										  <button type="submit" class="btn btn-warning">Kirim <span class="glyphicon glyphicon-send"></span></button>
+										</div>
+									</div>
 
 								</div>
 							</form>
