Update index.html 1. Edit title of website 2. Edit meta 3. Favicon 4. Add custom style (custom.jamiik.css)

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Jamiik &mdash; 100% Aplikasi Jamaah</title>
+	<title>Jamiik: Religion & Education</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
+	<meta name="description" content="" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="author" content="JAMIIK.COM" />
 
   <!-- 
 	//////////////////////////////////////////////////////
@@ -39,7 +39,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="/favicon.ico">
 
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	
@@ -58,6 +58,8 @@
 	<link rel="stylesheet" href="css/custom.form.css">
 	<!-- Bootstrap Validator  -->
 	<link rel="stylesheet" href="css/bootstrapValidator.css">
+	<!-- Custom style  -->
+	<link rel="stylesheet" href="css/custom.jamiik.css">
 
 	<!-- 
 	Default Theme Style 
