Update index.html ~ Add and remove menu

--- a/index.html
+++ b/index.html
@@ -82,33 +82,33 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
 	</head>
 	
 	<body>
 	<header role="banner" id="fh5co-header">
-			<div class="container">
-				<!-- <div class="row"> -->
-			    <nav class="navbar navbar-default">
+		<div class="container">
+			<!-- <div class="row"> -->
+			<nav class="navbar navbar-default">
 		        <div class="navbar-header">
 		        	<!-- Mobile Toggle Menu Button -->
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 					<a class="navbar-brand" href="index.html"><img src="images/jamiik_logo.png" height="30px" alt="Free HTML5 Template"></a> 
 		        </div>
 		        <div id="navbar" class="navbar-collapse collapse">
-		          <ul class="nav navbar-nav navbar-right">
-		            <li class="active"><a href="#" data-nav-section="beranda"><span>BERANDA</span></a></li>
-					<li><a href="#" data-nav-section="tentangjamiik"><span>TENTANG JAMIIK</span></a></li>
-					<li><a href="#" data-nav-section="modelbisnis"><span>MODEL BISNIS</span></a></li>
-					<li><a href="#" data-nav-section="proyeksi"><span>PROYEKSI</span></a></li>
-					<li><a href="#" data-nav-section="mengapaberiklan"><span>MENGAPA BERIKLAN?</span></a></li>
-					<li><a href="#" data-nav-section="paketiklan"><span>PAKET IKLAN</span></a></li>
-					<li><a href="#" data-nav-section="fituriklan"><span>FITUR IKLAN</span></a></li>
-		          </ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li class="active"><a href="#" data-nav-section="beranda"><span>BERANDA</span></a></li>
+						<li><a href="#" data-nav-section="appsjamiik"><span>FITUR</span></a></li>				
+						<li><a href="#" data-nav-section="tentangjamiik"><span>TENTANG JAMIIK</span></a></li>
+						<li><a href="#" data-nav-section="modelbisnis"><span>MODEL BISNIS</span></a></li>
+						<li><a href="#" data-nav-section="proyeksi"><span>PROYEKSI</span></a></li>
+						<li><a href="#" data-nav-section="paketiklan"><span>PAKET IKLAN</span></a></li>
+						<li><a href="#" data-nav-section="kontakkami"><span>KONTAK KAMI</span></a></li>
+						<li><a href="#" data-nav-section="timkami"><span>TIM KAMI</span></a></li>
+					</ul>
 		        </div>
-			    </nav>
-			  <!-- </div> -->
-		  </div>
+			</nav>
+			<!-- </div> -->
+		</div>
 	</header>
 
 	<!-- BERANDA -->
