Update index.html 1. Edit content of BERANDA 2. Add new content: FITUR

--- a/index.html
+++ b/index.html
@@ -116,22 +116,11 @@
 		<div class="owl-carousel owl-carousel-fullwidth">
 			
 		    <!-- beranda #1 -->
-			<div class="item" style="background-image:url(images/beranda_1_background.jpg)"> 
+			<div class="item" style="background-image:url(images/beranda_1_background.jpg)">
 				<div class="container" style="position: relative;">
 					<div class="row">
-						<div class="col-md-6">
-							<div class="fh5co-owl-text-wrap">
-								<div class="fh5co-owl-text">
-									<div class="beranda_1_foreground_1 to-animate-2"><img src="images/beranda_1_foreground_1.png" class="img-responsive img-rounded" alt="Free HTML5 Template"></div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-3 col-md-push-3">
-							<div class="fh5co-owl-text-wrap">
-								<div class="fh5co-owl-text">
-									<div class="beranda_1_foreground_2 to-animate-2"><img src="images/beranda_1_foreground_2.png" class="img-responsive img-rounded" alt="Free HTML5 Template"></div>
-								</div>
-							</div>
+						<div class="col-md-12" style="text-align:center;">
+							<div><img src="images/beranda_1_foreground.png" class="img-responsive"></div>
 						</div>
 					</div>
 				</div>
@@ -142,8 +131,7 @@
 				<div class="container" style="position: relative;">
 					<div class="row">
 						<div class="col-md-12">
-							<br><br>
-							<div class="beranda_2_foreground to-animate-2"><img src="images/beranda_2_foreground.png" class="img-responsive img-rounded" alt="Free HTML5 Template"></div>
+							<div><img src="images/beranda_2_foreground.png" class="img-responsive"></div>
 						</div>
 					</div>
 				</div>
@@ -154,17 +142,143 @@
 				<div class="container" style="position: relative;">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="fh5co-owl-text-wrap">
-								<div class="fh5co-owl-text">
-									<div class="beranda_3_foreground to-animate-2"><img src="images/beranda_3_foreground.png" class="img-responsive img-rounded" alt="Free HTML5 Template"></div>
-								</div>
-							</div>
+							<div><img src="images/beranda_3_foreground.png" class="img-responsive"></div>
+						</div>
+					</div>
+				</div>
+		    </div>
+			
+			<!-- beranda #4 -->
+			<div class="item" style="background-image:url(images/beranda_4_background.jpg)">
+				<div class="container" style="position: relative;">
+					<div class="row">
+						<div class="col-md-12">
+							<div><img src="images/beranda_4_foreground.png" class="img-responsive"></div>
+						</div>
+					</div>
+				</div>
+		    </div>
+			
+			<!-- beranda #5 -->
+			<div class="item" style="background-image:url(images/beranda_5_background.jpg)">
+				<div class="container" style="position: relative;">
+					<div class="row">
+						<div class="col-md-12">
+							<div><img src="images/beranda_5_foreground.png" class="img-responsive"></div>
 						</div>
 					</div>
 				</div>
 		    </div>
 			
 		</div>
+	</div>
+	
+	<!-- FITUR: JAMIIK APP -->
+	<div data-section="appsjamiik" >
+		<!-- Printscreen of Apps and Description -->
+		<div class="owl-carousel owl-carousel-fullwidth" >
+			<!-- Tab 1: List of Events -->
+			<div class="item" style="background: #8BC34A;">
+				<div class="container" style="position: relative;">
+					<div class="row">
+						<div class="col-md-3 col-md-push-1" style="height:500px; margin-top:100px; margin-bottom:0px;">
+							<img src="images/ss_app_1_tablist.png" style ="height:100%;width:auto;" alt="">
+						</div>
+						<div class="col-md-8 col-md-push-1" >
+							<div class="fh5co-owl-text-wrap">
+								<div class="fh5co-owl-text">
+									<h1 class="fh5co-lead to-animate" style="margin-bottom:25px">Daftar Event</h1>
+									<h2 class="fh5co-sub-lead to-animate">
+										Tab ini berfungsi untuk menyajikan informasi seputar kajian-kajian yang akan diselenggarakan di sekitar Anda.<br>
+										<ul>
+											<li>Kajian diurut berdasarkan waktu dan tempat terdekat</li>
+											<li>Dapat menentukan prioritas yang muncul di list paling atas</li>
+											<li>Dapat mencari kajian berdasarkan lokasi, tema, dan pembicara</li>
+											<li>Dapat menambah kajian dengan mengisi beberapa informasi</li>
+										</ul>
+									</h2>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Tab 2: Official Accounts -->
+			<div class="item" style="background: #8BC34A;">
+				<div class="container" style="position: relative;">
+					<div class="row">
+						<div class="col-md-3 col-md-push-1" style="height:500px; margin-top:100px; margin-bottom:0px;">
+							<img src="images/ss_app_2_tabofficial.png" style ="height:100%;width:auto;" alt="">
+						</div>
+						<div class="col-md-8 col-md-push-1" >
+							<div class="fh5co-owl-text-wrap">
+								<div class="fh5co-owl-text">
+									<h1 class="fh5co-lead to-animate" style="margin-bottom:25px">Official Account</h1>
+									<h2 class="fh5co-sub-lead to-animate">
+										Tab ini berfungsi untuk menyajikan informasi tentang tokoh-tokoh, organisasi, dan penyelenggara kegiatan.<br>
+										<ul>
+											<li>Dapat mencari dan mengikuti ulama, motivator, dan tokoh pembicara lainnya.</li>
+											<li>Dapat mencari dan mengikuti penyelenggara kegiatan, pengelola masjid, dan lembaga lainnya.</li>
+											<li>Dapat membuat official account, sehingga memudahkan Anda untuk membagikan profil dan informasi penting terkait tokoh dan lembaga.</li>
+										</ul>
+									</h2>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Tab 3: Map of Events -->
+			<div class="item" style="background: #8BC34A;">
+				<div class="container" style="position: relative;">
+					<div class="row">
+						<div class="col-md-3 col-md-push-1" style="height:500px; margin-top:100px; margin-bottom:0px;">
+							<img src="images/ss_app_3_tabmap.png" style ="height:100%;width:auto;" alt="">
+						</div>
+						<div class="col-md-8 col-md-push-1" >
+							<div class="fh5co-owl-text-wrap">
+								<div class="fh5co-owl-text">
+									<h1 class="fh5co-lead to-animate" style="margin-bottom:25px">Peta Lokasi Kajian</h1>
+									<h2 class="fh5co-sub-lead to-animate">
+										Fitur tab ini memudahkan Anda untuk berbagi dan menemukan kajian di sekitar Anda beserta informasi detailnya.<br>
+										<ul>
+											<li>Anda juga dapat melihat lokasi masjid-masjid dan pesantren di sekitar Anda.</li>
+											<li>Anda dapat memasukkan nama lokasi tertentu, sehingga dapat mengetahui kajian-kajian yang berada di sekitar lokasi tersebut.</li>
+										</ul>
+									</h2>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Tab 4: Dashboard -->
+			<div class="item" style="background: #8BC34A;">
+				<div class="container" style="position: relative;">
+					<div class="row">
+						<div class="col-md-3 col-md-push-1" style="height:500px; margin-top:100px; margin-bottom:0px;">
+							<img src="images/ss_app_4_tabdashboard.png" style ="height:100%;width:auto;" alt="">
+						</div>
+						<div class="col-md-8 col-md-push-1" >
+							<div class="fh5co-owl-text-wrap">
+								<div class="fh5co-owl-text">
+									<h1 class="fh5co-lead to-animate" style="margin-bottom:25px">Dashboard</h1>
+									<h2 class="fh5co-sub-lead to-animate">
+										Tab ini memiliki fungsi sebagai halaman pengaturan minat Anda terhadap hal-hal yang berkaitan dengan kajian.<br>
+										<ul>
+											<li>Dapat menentukan tema-tema kajian</li>
+											<li>Dapat memilih tokoh, lembaga dan pengguna Jamiik untuk diikuti</li>
+											<li>Dapat mengetahui feedback, notifikasi atau update informasi terbaru</li>
+										</ul>
+									</h2>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 	
 	<!-- TENTANG KAMI -->
