Update index.html 1. Add content of KONTAK KAMI 2. Add content of TIM KAMI 3. Remove some content of footer

--- a/index.html
+++ b/index.html
@@ -603,6 +603,48 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- KONTAK KAMI -->
+	<div id="fh5co-our-services" data-section="kontakkami" style="padding-top:50px; padding-bottom:70px;">
+		<div class="container">
+			<!-- title -->
+			<div class="row">
+				<div class="col-md-12 section-heading text-center">
+					<h2 class="to-animate">Kontak Kami</h2>
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 to-animate" style="margin-top:30px; margin-bottom:50px;">
+							<p>Kami membuka diri untuk pertanyaan, masukan dan permintaan kerja sama dari berbagai pihak. Silakan kontak kami untuk pembicaraan yang lebih intensi</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- content -->
+			<div class="row">
+				<div class="col-md-12 to-animate">
+					<div class="row" id="about-us">
+						<div class="col-md-4">
+							<div class="box to-animate">
+								<div class="icon colored-1"><span><a href="#"><i class="icon-mail2"></i></a></span></div>
+								<h3><a href="#">info[at]jamiik.com</a></h3>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="box to-animate">
+								<div class="icon colored-6"><span><a href="https://www.facebook.com/jamiik.com2015/"><i class="icon-facebook"></i></a></span></div>
+								<h3><a href="https://www.facebook.com/jamiik.com2015/">Facebook</a></h3>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="box to-animate">
+								<div class="icon colored-5"><span><a href="https://twitter.com/Jamiik_App"><i class="icon-twitter"></i></a></span></div>
+								<h3><a href="https://twitter.com/Jamiik_App">Twitter</a></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 	<!-- FORM PENDAFTARAN IKLAN -->
 	<div id="fh5co-testimonials" data-section="formpendaftaraniklan">
@@ -691,19 +733,95 @@
 		</div>
 	</div>
 	
+	<!-- TIM KAMI -->
+	<div id="fh5co-testimonials" data-section="timkami" style="padding-top:50px; padding-bottom:0px;">
+		<div class="container">
+			<div class="row">
+				<!-- title -->
+				<div class="col-md-12 section-heading text-center">
+					<h2 class="to-animate">Tim Kami</h2>
+				</div>
+				<!-- content -->
+				<div class="col-md-12">
+					<!-- 1st row -->
+					<div class="row">
+						<div class="col-md-2 col-md-push-1 text-center to-animate">
+							<div class="person">
+								<img src="images/MohamadAminuddin.png" class="img-responsive img-thumbnail" alt="Person">
+								<h3 class="name" style="color:#FFFFFF">Mohamad Aminuddin</h3>
+								<div class="position" style="color:#FFFFFF">Project Manager</div>
+							</div>
+						</div>
+						<div class="col-md-2 col-md-push-1 text-center to-animate">
+							<div class="person">
+								<img src="images/SaifulAkbar.png" class="img-responsive img-thumbnail" alt="Person">
+								<h3 class="name" style="color:#FFFFFF">Saiful Akbar</h3>
+								<div class="position" style="color:#FFFFFF">Operational Manager</div>
+							</div>
+						</div>
+						<div class="col-md-2 col-md-push-1 text-center to-animate">
+							<div class="person">
+								<img src="images/FirmanFauzi.png" class="img-responsive img-thumbnail" alt="Person">
+								<h3 class="name" style="color:#FFFFFF">Firman Fauzi</h3>
+								<div class="position" style="color:#FFFFFF">Designer</div>
+							</div>
+						</div>
+						<div class="col-md-2 col-md-push-1 text-center to-animate">
+							<div class="person">
+								<img src="images/PutriNhirun.png" class="img-responsive img-thumbnail" alt="Person">
+								<h3 class="name" style="color:#FFFFFF">Putri Nhirun</h3>
+								<div class="position" style="color:#FFFFFF">Public Relation</div>
+							</div>
+						</div>
+						<div class="col-md-2 col-md-push-1 text-center to-animate">
+							<div class="person">
+								<img src="images/AlifaNuraniPutri.png" class="img-responsive img-thumbnail" alt="Person">
+								<h3 class="name" style="color:#FFFFFF">Alifa Nurani Putri</h3>
+								<div class="position" style="color:#FFFFFF">Developer</div>
+							</div>
+						</div>
+					</div>
+					<!-- 2nd row -->
+					<div class="row">
+						<div class="col-md-2 col-md-push-2 text-center to-animate">
+							<div class="person">
+								<img src="images/ChoirunnisaFatima.png" class="img-responsive img-thumbnail" alt="Person">
+								<h3 class="name" style="color:#FFFFFF">Choirunnisa Fatima</h3>
+								<div class="position" style="color:#FFFFFF">Developer</div>
+							</div>
+						</div>
+						<div class="col-md-2 col-md-push-2 text-center to-animate">
+							<div class="person">
+								<img src="images/AlfianRamadhan.png" class="img-responsive img-thumbnail" alt="Person">
+								<h3 class="name" style="color:#FFFFFF">Alfian Ramadhan</h3>
+								<div class="position" style="color:#FFFFFF">Developer</div>
+							</div>
+						</div>
+						<div class="col-md-2 col-md-push-2 text-center to-animate">
+							<div class="person">
+								<img src="images/BaharuddinAziz.png" class="img-responsive img-thumbnail" alt="Person">
+								<h3 class="name" style="color:#FFFFFF">Baharuddin Aziz</h3>
+								<div class="position" style="color:#FFFFFF">Developer</div>
+							</div>
+						</div>
+						<div class="col-md-2 col-md-push-2 text-center to-animate">
+							<div class="person">
+								<img src="images/GianNurmanLestari.png" class="img-responsive img-thumbnail" alt="Person">
+								<h3 class="name" style="color:#FFFFFF">Gian Nurman Lestari</h3>
+								<div class="position" style="color:#FFFFFF">Developer</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+		
 	<footer id="footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
 				<div class="col-md-12">
-					<p class="copyright text-center">&copy; 2016 Jamiik. All Rights Reserved. </p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12 text-center">
-					<ul class="social social-circle">
-						<li><a href="https://www.facebook.com/Jamiik-565770933588883"><i class="icon-facebook"></i></a></li>				
-						<li><a href="https://twitter.com/Jamiik_App"><i class="icon-twitter"></i></a></li>
-					</ul>
+					<p class="copyright text-center">&copy; 2016 Jamiik.</p>
 				</div>
 			</div>
 		</div>
