Update index.html ~ Edit content of MODEL BISNIS

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 	
 	<!-- MODEL BISNIS -->
 	<div id="fh5co-about-us" data-section="modelbisnis">
-		<div class="container-fullwidth">
+		<div class="container">
 			<!-- #1 -->
 			<div class="row" id="about-us">
 				<!-- Title #1 -->
