Update index.html ~ Edit content of footer

--- a/index.html
+++ b/index.html
@@ -819,9 +819,10 @@
 		
 	<footer id="footer" role="contentinfo">
 		<div class="container">
-			<div class="row row-bottom-padded-sm">
+			<div class="row">
 				<div class="col-md-12">
-					<p class="copyright text-center">&copy; 2016 Jamiik.</p>
+					<p class="copyright text-center">Aplikasi Jamiik masih dalam pengembangan, nantikan versi BETA-nya dalam waktu dekat</p>
+					<p class="copyright text-center"> <strong> &copy; 2016 Jamiik </strong></p>
 				</div>
 			</div>
 		</div>
