--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	</head>
 	
 	<body>
-	<header role="banner" id="fh5co-header">
+	<header role="banner" id="fh5co-header" class="navbar-fixed-top fh5co-animated slideInDown">
 		<div class="container">
 			<!-- <div class="row"> -->
 			<nav class="navbar navbar-default">
