--- a/index.html
+++ b/index.html
@@ -281,6 +281,66 @@
 
 	</div>
 	
+	
+	<!-- PROFIL USER-->
+	<div class="jamiik-section" datasection="profiluser" style="background-color: #FEFF65;">
+		<div class="container" style="position: center">
+			<!-- title -->
+			<div class="row" id="about-us">
+				<div class="col-md-12 section-heading text-center">
+					<h2 class="to-animate">Profil User</h2>
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 to-animate">
+							<h3>Pengguna dari Jamiik Apps adalah sebagai berikut.</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row" id="about-us">	
+				<div class="col-md-12">	
+					<div class="col-md-7 col-md-push-3">
+						<div class="box-testimony to-animate">
+							<blockquote>
+								<span class="quote"><span><i class="icon-quote-left"></i></span></span>
+								<ul>
+									<li>Menggunakan smartphone dan tinggal perkotaan</li>
+									<li>Dinamis dan suka hal-hal baru</li>
+									<li>Golongan menengah-atas</li>
+									<li>Mahasiswa, karyawan, hingga wirausahan (19-50 tahun)</li>
+									<li>Memiliki komunitas</li>
+									<li>Mencari kualitas hidup yang tinggi</li>
+									<li>Laki-laki dan perempuan yang beragama Islam</li>
+								</ul>
+							</blockquote>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-12">					
+					<div class="row">
+						<div class="col-md-4 col-md-push-2 to-animate">
+							<img src="images/proyeksi1.jpg" class="img-responsive img-rounded jamiik-img-border" alt="">
+							<br>
+						</div>
+						<div class="col-md-4 col-md-push-2 to-animate">
+							<img src="images/proyeksi2.jpg" class="img-responsive img-rounded jamiik-img-border" alt="">
+							<br>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-12">					
+					<div class="row">
+						<div class="col-md-8 col-md-push-2 to-animate">
+							<img src="images/proyeksi3.jpg" class="img-responsive img-rounded jamiik-img-border" alt="">
+							<br>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	
+	</div>
+	
+	
 	<!-- TENTANG KAMI -->
 	<div id="fh5co-testimonials" data-section="tentangjamiik">
 		<div class="container">
