Update index.html ~ Edit list of menu in menu bar

--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="#" data-nav-section="beranda"><span>BERANDA</span></a></li>
 						<li><a href="#" data-nav-section="appsjamiik"><span>FITUR</span></a></li>				
-						<li><a href="#" data-nav-section="tentangjamiik"><span>TENTANG JAMIIK</span></a></li>
-						<li><a href="#" data-nav-section="modelbisnis"><span>MODEL BISNIS</span></a></li>
-						<li><a href="#" data-nav-section="proyeksi"><span>PROYEKSI</span></a></li>
+						<li><a href="#" data-nav-section="profiluser"><span>PROFIL USER</span></a></li>
 						<li><a href="#" data-nav-section="paketiklan"><span>PAKET IKLAN</span></a></li>
 						<li><a href="#" data-nav-section="kontakkami"><span>KONTAK KAMI</span></a></li>
 						<li><a href="#" data-nav-section="timkami"><span>TIM KAMI</span></a></li>
