Update index.html ~ Edit content of PROFIL USER

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 	
 	
 	<!-- PROFIL USER-->
-	<div class="jamiik-section" datasection="profiluser" style="background-color: #FEFF65;">
+	<div id="fh5co-testimonials" data-section="profiluser">
 		<div class="container" style="position: center">
 			<!-- title -->
 			<div class="row" id="about-us">
