--- a/index.html
+++ b/index.html
@@ -341,159 +341,153 @@
 	<!-- PAKET IKLAN -->
 	<div id="fh5co-pricing" data-section="paketiklan">
 		<div class="container">
-			<!-- #1 -->
 			<div class="row" id="about-us">
-				<!-- Title #1 -->
+				<!-- Title -->
 				<div class="col-md-12 section-heading text-center">
 					<h2 class="to-animate">PAKET IKLAN</h2>
 				</div>
-				<!-- Content #1 -->
+				<!-- Row #1 -->
 				<div class="row">
-					<!-- Tab List -->
-					<div class="col-md-4 col-sm-6">
-						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Tab List</h2>
-							<div class="price"><sup class="currency">Rp</sup>10<small>/impresi</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>10 projects</li>
-								<li>20 Pages</li>
-								<li>20 Emails</li>
-								<li>100 Images</li>
-							</ul>
-							<a href="#" class="btn btn-default btn-sm">Pilih</a>
+					<div class="col-md-12">
+						<!-- Paket 1: Banner Iklan -->
+						<div class="col-md-3" style="height:450px; margin-top:0px; margin-bottom:0px;">
+							<img src="images/paketiklan_1_ banneriklan.png" style ="height:100%;width:auto;padding-left:50px;" alt="">	
 						</div>
-					</div>
-					<!-- Event -->
-					<div class="col-md-4 col-sm-6">
-						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Event</h2>
-							<div class="price"><sup class="currency">Rp</sup>10<small>/impresi</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>15 projects</li>
-								<li>40 Pages</li>
-								<li>40 Emails</li>
-								<li>200 Images</li>
-							</ul>
-							<a href="#" class="btn btn-default btn-sm">Pilih</a>
-						</div>
-					</div>
-					<!-- Banner Sponsor -->
-					<div class="col-md-4 col-sm-6 to-animate">
-						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Banner Sponsor</h2>
-							<div class="price"><sup class="currency">Rp</sup>10<small>/impresi</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>Unlimitted projects</li>
-								<li>100 Pages</li>
-								<li>100 Emails</li>
-								<li>700 Images</li>
-							</ul>
-							<a href="#" class="btn btn-default btn-sm">Pilih</a>
-						</div>
-					</div>
-					<!-- Tab Pengelola -->
-					<div class="col-md-4 col-sm-6">
-						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Tab Pengelola</h2>
-							<div class="price"><sup class="currency">Rp</sup>10<small>/impresi</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>Unlimitted projects</li>
-								<li>Unlimitted Pages</li>
-								<li>Unlimitted Emails</li>
-								<li>Unlimitted Images</li>
-							</ul>
-							<a href="#" class="btn btn-default btn-sm">Pilih</a>
-						</div>
-					</div>
-					<!-- Tab Profil -->
-					<div class="col-md-4 col-sm-6">
-						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Tab Profil</h2>
-							<div class="price"><sup class="currency">Rp</sup>10<small>/impresi</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>Unlimitted projects</li>
-								<li>Unlimitted Pages</li>
-								<li>Unlimitted Emails</li>
-								<li>Unlimitted Images</li>
-							</ul>
-							<a href="#" class="btn btn-default btn-sm">Pilih</a>
-						</div>
-					</div>
-					<!-- Best value -->
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-md-4 col-sm-6">
-						<div class="price-box popular to-animate">
-							<div class="popular-text">Best value</div>
-							<h2 class="pricing-plan">Tab Map</h2>
-							<div class="price"><sup class="currency">Rp</sup>50.000<small>/klik</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>Unlimitted projects</li>
-								<li>Unlimitted Pages</li>
-								<li>Unlimitted Emails</li>
-								<li>Unlimitted Images</li>
-							</ul>
-							<a href="#" class="btn btn-primary btn-sm">Pilih</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			
-			<!-- #2 -->
-			<div id="fh5co-features">
-				<div class="container">
-					<!-- Title #2 -->
-					<div class="row">
-						<div class="col-md-12 section-heading text-center">
-							<h2 class="single-animate animate-features-1">Keterangan</h2>
-							<div class="row">
-								<div class="col-md-8 col-md-offset-2 single-animate animate-features-2">
-									<h3>Kerangan dan ketentuan umum</h3>
-								</div>
+						<div class="col-md-3">
+							<div class="price-box to-animate">
+								<h2 class="pricing-plan">Banner Iklan</h2>						
+								<p>
+									<b>Jenis Iklan:</b><br>
+									Banner Iklan (320x50)<br>
+									<b>Deskripsi:</b><br>
+									<ul style="padding-left:20px">
+										<li>Tampil per-10 list kegiatan</li>
+										<li>Iklan per impresi: jumlah iklan ditampilkan ke 1 pengguna.</li>
+										<li>Berformat jpeg/png/gif.</li>
+										<li>Saat di-klik, membuka website/aplikasi milik pengiklan.</li>
+									</ul>
+								</p>
+								<a href="#" class="btn btn-default btn-sm">Pilih</a>
 							</div>
 						</div>
-					</div>
-					<!-- Content #2 -->
-					<div class="row row-bottom-padded-sm">
-						<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-service to-animate">
-							<div class="fh5co-icon"><i class="icon-present"></i></div>
-							<div class="fh5co-desc">
-								<h3>Iklan per Impresi</h3>
-								<p>Iklan per impresi adalah jumlah iklan yang ditampilkan ke satu pengguna.</p>
-								<p>Setiap impresi, iklan akan ditayangkan selama 30 detik.</p>
-							</div>	
+						<!-- Paket 2: Banner Kegiatan -->
+						<div class="col-md-3" style="height:450px; margin-top:0px; margin-bottom:0px;">
+							<img src="images/paketiklan_2_ bannerkegiatan.png" style ="height:100%;width:auto;padding-left:50px;" alt="">	
 						</div>
-						<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-service to-animate">
-							<div class="fh5co-icon"><i class="icon-eye"></i></div>
-							<div class="fh5co-desc">
-								<h3>Iklan per Klik</h3>
-								<p>Iklan per klik adalah jumlah klik yang dilakukan oleh pengguna.</p>
-								<p>Saat iklan di-klik, akan terbuka situs/aplikasi lain milik Perusahaan Pengiklan </p>
-							</div>
-						</div>
-						<div class="clearfix visible-sm-block visible-xs-block"></div>
-						<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-service to-animate">
-							<div class="fh5co-icon"><i class="icon-crop"></i></div>
-							<div class="fh5co-desc">
-								<h3>Lain-lain</h3>
-								<p>Iklan pada daftar kegiatan akan tampil per-10 daftar.</p>
-								<p>Iklan pada peta akan tampil dalam bentuk point icon yang menunjukkan lokasi tertentu.</p>
+						<div class="col-md-3">
+							<div class="price-box to-animate">
+								<h2 class="pricing-plan">Banner Kegiatan</h2>						
+								<p>
+									<b>Jenis Iklan:</b><br>
+									Banner Kegiatan (320x50)<br>
+									<b>Deskripsi:</b><br>
+									<ul style="padding-left:20px">
+										<li>Tampil di list prioritas</li>
+										<li>Iklan per impresi: jumlah iklan ditampilkan ke 1 pengguna.</li>
+										<li>Berformat jpeg/png/gif.</li>
+										<li>Saat di-klik, membuka website/aplikasi milik pengiklan.</li>
+									</ul>
+								</p>
+								<a href="#" class="btn btn-default btn-sm">Pilih</a>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+				<!-- Row #2 -->
+				<div class="row">
+					<div class="col-md-12">
+						<!-- Paket 3: Banner Sponsor -->
+						<div class="col-md-3" style="height:450px; margin-top:0px; margin-bottom:0px;">
+							<img src="images/paketiklan_3_ bannersponsor.png" style ="height:100%;width:auto;padding-left:50px;" alt="">	
+						</div>
+						<div class="col-md-3">
+							<div class="price-box to-animate">
+								<h2 class="pricing-plan">Banner Sponsor</h2>						
+								<p>
+									<b>Jenis Iklan:</b><br>
+									Banner Iklan (320x50)<br>
+									<b>Deskripsi:</b><br>
+									<ul style="padding-left:20px">
+										<li>Tampil dalam info kegiatan yang ditunjuk</li>
+										<li>Dikesankan sebagai sponsorship</li>
+										<li>Berformat jpeg/png/gif.</li>
+										<li>Saat di-klik, membuka website/aplikasi milik pengiklan.</li>
+									</ul>
+								</p>
+								<a href="#" class="btn btn-default btn-sm">Pilih</a>
+							</div>
+						</div>
+						<!-- Paket 4: Banner Official -->
+						<div class="col-md-3" style="height:450px; margin-top:0px; margin-bottom:0px;">
+							<img src="images/paketiklan_4_ bannerofficial.png" style ="height:100%;width:auto;padding-left:50px;" alt="">	
+						</div>
+						<div class="col-md-3">
+							<div class="price-box to-animate">
+								<h2 class="pricing-plan">Banner Official</h2>						
+								<p>
+									<b>Jenis Iklan:</b><br>
+									Banner Kegiatan (320x50)<br>
+									<b>Deskripsi:</b><br>
+									<ul style="padding-left:20px">
+										<li>Per-5 list ulama/organisasi</li>
+										<li>Iklan per impresi: jumlah iklan ditampilkan ke 1 pengguna.</li>
+										<li>Berformat jpeg/png/gif.</li>
+										<li>Saat di-klik, membuka website/aplikasi milik pengiklan.</li>
+									</ul>
+								</p>
+								<a href="#" class="btn btn-default btn-sm">Pilih</a>
+							</div>
+						</div>
+					</div>
+				</div>	
+				<!-- Row #3 -->
+				<div class="row">
+					<div class="col-md-12">
+						<!-- Paket 5: Map Point -->
+						<div class="col-md-3" style="height:450px; margin-top:0px; margin-bottom:0px;">
+							<img src="images/paketiklan_5_ mappoint.png" style ="height:100%;width:auto;padding-left:50px;" alt="">	
+						</div>
+						<div class="col-md-3">
+							<div class="price-box to-animate">
+								<h2 class="pricing-plan">Map Point</h2>						
+								<p>
+									<b>Jenis Iklan:</b><br>
+									Point in Map + Banner<br>
+									<b>Deskripsi:</b><br>
+									<ul style="padding-left:20px">
+										<li>Tampil dalam peta, bentuk point</li>
+										<li>Per impresi: jumlah iklan ditampilkan ke 1 pengguna.</li>
+										<li>Berformat jpeg/png/gif.</li>
+										<li>Saat klik, buka website/aplikasi pengiklan.</li>
+									</ul>
+								</p>
+								<a href="#" class="btn btn-default btn-sm">Pilih</a>
+							</div>
+						</div>
+						<!-- Paket 6: Banner Dashboard -->
+						<div class="col-md-3" style="height:450px; margin-top:0px; margin-bottom:0px;">
+							<img src="images/paketiklan_6_ bannerdashboard.png" style ="height:100%;width:auto;padding-left:50px;" alt="">	
+						</div>
+						<div class="col-md-3">
+							<div class="price-box to-animate">
+								<h2 class="pricing-plan">Banner Dashboard</h2>						
+								<p>
+									<b>Jenis Iklan:</b><br>
+									Floating Banner (320x50)<br>
+									<b>Deskripsi:</b><br>
+									<ul style="padding-left:20px">
+										<li>Tayang tiap 30 detik</li>
+										<li>Per impresi: jumlah iklan ditampilkan ke 1 pengguna.</li>
+										<li>Berformat jpeg/png/gif.</li>
+										<li>Saat klik, buka website/aplikasi pengiklan.</li>
+									</ul>
+								</p>
+								<a href="#" class="btn btn-default btn-sm">Pilih</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>		
 		</div>
 	</div>
 
